# EUWallet

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  STATUS.md  deny.toml  rust-toolchain.toml
.claude/: launch.json
android/: README.md  build-rust-bridge.sh  build.gradle.kts  settings.gradle.kts
crates/benches/: Cargo.toml
crates/benches/src/: main.rs
crates/catalogue/: Cargo.toml
crates/catalogue/src/: lib.rs
crates/cose/: Cargo.toml
crates/cose/src/: cbor.rs  lib.rs
crates/cose/tests/: cbor_canonical.rs  cose_sign1.rs
crates/crypto-backend/: Cargo.toml
crates/crypto-backend/src/: lib.rs
crates/crypto-backend/tests/: backend_unit.rs  e2e_issuance.rs  e2e_payment_sca.rs  e2e_presentation.rs  real_crypto_integration.rs  regulatory_sca.rs
crates/crypto-traits/: Cargo.toml
crates/crypto-traits/src/: lib.rs
crates/iso18013-5/: Cargo.toml
crates/iso18013-5/src/: lib.rs
crates/iso18013-5/tests/: conformance.rs  e2e_proximity.rs  model_traces.json  transitions.rs
crates/jwe/: Cargo.toml
crates/jwe/src/: lib.rs
crates/mdoc/: Cargo.toml
crates/mdoc/src/: lib.rs
crates/mdoc/tests/: device_response.rs  issuer_signed.rs  oid4vp_transcript.rs  prop_cbor.rs
crates/oid4vci/: Cargo.toml
crates/oid4vci/src/: authorization.rs  binding.rs  bounded_json.rs  credential.rs  foundation.rs  lib.rs  pid_profile.rs
crates/oid4vci/tests/: authorization.rs  conformance.rs  credential.rs  foundation.rs  model_traces.json  pid_binding.rs  pid_profile.rs  transitions.rs
crates/oid4vp/: Cargo.toml
crates/oid4vp/src/: dcql.rs  lib.rs
crates/oid4vp/tests/: conformance.rs  mdoc_presentation.rs  model_traces.json  transitions.rs
crates/payment/: Cargo.toml
crates/payment/src/: lib.rs
crates/payment/tests/: conformance.rs  model_traces.json  transitions.rs
crates/presenter/: Cargo.toml
crates/presenter/src/: lib.rs
crates/presenter/tests/: consent_hash.rs
crates/qes/: Cargo.toml
crates/qes/src/: lib.rs
crates/qes/tests/: conformance.rs  model_traces.json
crates/sdjwt/: Cargo.toml
crates/sdjwt/src/: lib.rs
crates/sdjwt/tests/: sd_jwt_vc.rs
crates/shell-io/: Cargo.toml
crates/shell-io/src/: http.rs  lib.rs
crates/shell-io/tests/: e2e_live_lifecycle.rs  e2e_live_presentation.rs
crates/status/: Cargo.toml
crates/status/src/: lib.rs
crates/status/tests/: status_list.rs
crates/trust/: Cargo.toml
crates/trust/src/: lib.rs
crates/trust/tests/: trust_list.rs
crates/txnlog/: Cargo.toml
crates/txnlog/src/: lib.rs
crates/w2w/: Cargo.toml
crates/w2w/src/: lib.rs
crates/w2w/tests/: conformance.rs  model_traces.json
crates/wallet-core/: Cargo.toml  uniffi.toml
crates/wallet-core/src/: delivery.rs  demo.rs  durable.rs  export.rs  lib.rs
crates/wallet-core/tests/: add_credential.rs  demo_fixture.rs  e2e_dcql_values.rs  e2e_direct_post_jwt.rs  e2e_flow.rs  e2e_issuance.rs  e2e_mdoc_encrypted.rs  e2e_mdoc_flow.rs  e2e_mdoc_status.rs  e2e_multi_credential.rs  e2e_payment.rs  e2e_presentation_validity.rs  e2e_sdjwt_structured.rs  e2e_status.rs  e2e_vp_delivery_policy.rs  export.rs  ffi_json_contract.rs  qes_flow.rs  txn_log.rs  verified_ingestion.rs  w2w_flow.rs
crates/wallet-core/tests/vectors/mdoc-x5chain/: bridge-a.der.b64  bridge-b.der.b64  generate.sh  openssl.cnf  root-a.der.b64  root-b.der.b64
crates/wua/: Cargo.toml
crates/wua/src/: lib.rs
crates/wua/tests/: wua.rs
crates/x509/: Cargo.toml
crates/x509/src/: lib.rs
crates/x509/tests/: eudiw_anchors.rs  name_constraints_and_algorithms.rs  policy_processing.rs  rp_profile.rs  strict_path.rs
crates/x509/tests/vectors/: ambiguous-issuer.der.b64  ca.crt  ca.der  ca.key  issuer.der.b64  other-issuer.der.b64  rp.crt  rp.der  rp.key  rp.pkcs8.der  tls.crt  tls.der  tls.key
crates/x509/tests/vectors/constraints/: constrained-root.der.b64  directory-allowed-leaf.der.b64  directory-constraint-root.der.b64  directory-excluded-leaf.der.b64  directory-outside-leaf.der.b64  ec-signed-rsa-leaf.der.b64  ed25519-leaf.der.b64  ed25519-root.der.b64  email-allowed-leaf.der.b64  email-constraint-root.der.b64  email-excluded-leaf.der.b64  email-outside-leaf.der.b64  exponent-three-root.der.b64  generate.sh  illegal-constraint-leaf.der.b64  intersection-intermediate.der.b64  intersection-root.der.b64  leaf-allowed.der.b64  leaf-dns-excluded.der.b64  leaf-dns-outside.der.b64  leaf-ip-excluded.der.b64  leaf-ip-outside.der.b64  leaf-team-allowed.der.b64  leaf-team-outside.der.b64  leaf-uri-apex.der.b64  leaf-uri-excluded.der.b64  leaf-uri-no-authority.der.b64  noncritical-constraint-root.der.b64  noncritical-leaf.der.b64  openssl.cnf  p256-sha384-root.der.b64  p384-leaf.der.b64  p384-root.der.b64  p521-root.der.b64  plain-leaf.der.b64  policy-any-allowed-intermediate.der.b64  policy-any-allowed-leaf.der.b64  policy-any-inhibited-intermediate.der.b64  policy-any-inhibited-leaf.der.b64  policy-any-inhibitor.der.b64  (+14 more)
crates/x509/tests/vectors/strict/: generate.sh  intermediate-a.der.b64  intermediate-b.der.b64  intermediate-missing-bc.der.b64  intermediate-no-keycert.der.b64  intermediate-zero.der.b64  leaf-aki-mismatch.der.b64  leaf-missing-bc-parent.der.b64  leaf-no-digital-signature.der.b64  leaf-no-keycert-parent.der.b64  leaf-root-no-keycert.der.b64  leaf-unknown-critical.der.b64  leaf-zero.der.b64  leaf.der.b64  loop-a.der.b64  loop-b.der.b64  loop-leaf.der.b64  openssl.cnf  root-a.der.b64  root-b.der.b64  root-no-keycert.der.b64  root-zero.der.b64
crates/zkp/: Cargo.toml
crates/zkp/src/: experimental.rs  lib.rs
docs/: DURABLE_EFFECT_DELIVERY.md  DURABLE_LIFECYCLE.md  IMPLEMENTATION_PLAN.md  LAUNCH_PLAN.md  SECURITY_AUDIT.md  dependency-budget.md  normative-baselines.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cose_cbor.rs  mdoc_cbor.rs  sdjwt_parse.rs  x509_parse.rs
ios/: EUWalletDemo.entitlements  ExportOptions.plist  Package.swift  TESTFLIGHT.md  build-rust-xcframework.sh  project.yml  run-ui-tests.sh  testflight.sh  verify-app-bundle.sh  verify-identity-document-capability.sh  verify-rust-xcframework.sh
traceability/: requirements.csv
(+177 files in other folders)
