# cargo-fuzz workspace (plan Section 9). Detached from the main workspace on purpose.
# Requires the nightly toolchain: `rustup toolchain install nightly`.
# Run a target:  cargo +nightly fuzz run mdoc_cbor -- -max_total_time=60
[package]
name = "euwallet-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mdoc = { path = "../crates/mdoc" }
cose = { path = "../crates/cose" }
x509 = { path = "../crates/x509" }
sdjwt = { path = "../crates/sdjwt" }

[[bin]]
name = "mdoc_cbor"
path = "fuzz_targets/mdoc_cbor.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace so the fuzz build has its own graph.
[workspace]

[[bin]]
name = "cose_cbor"
path = "fuzz_targets/cose_cbor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sdjwt_parse"
path = "fuzz_targets/sdjwt_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "x509_parse"
path = "fuzz_targets/x509_parse.rs"
test = false
doc = false
bench = false
