[package]
name = "cose"
description = "COSE_Sign1 / COSE_Mac0 / COSE_Key (RFC 9052/9053) over crypto-traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
