[package]
name = "crypto-traits"
description = "Cryptographic trait boundary — the core depends only on these, never on a concrete crypto impl."
version.workspace = true
edition.workspace = true
# Kani 0.67's Rust 1.93 toolchain verifies this crate; keep that proof closure buildable there.
rust-version = "1.93"
license.workspace = true
publish.workspace = true

[dependencies]
