[package]
name = "oid4vci"
description = "OpenID4VCI 1.0 issuance — sans-IO, HAIP-only flows."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
mdoc = { path = "../mdoc" }
sdjwt = { path = "../sdjwt" }
x509 = { path = "../x509" }
