[package]
name = "oid4vci"
description = "OpenID4VCI 1.0 issuance — sans-IO, HAIP-only flows."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
mdoc = { path = "../mdoc" }
sdjwt = { path = "../sdjwt" }
x509 = { path = "../x509" }
# Credential offer / proof-of-possession JWT are JSON + base64url (from the budget).
serde_json = { workspace = true }
base64ct = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
crypto-backend = { path = "../crypto-backend" }

[lints]
workspace = true
