[package]
name = "oid4vp"
description = "OpenID4VP 1.0 remote presentation — sans-IO, HAIP-constrained state machine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
mdoc = { path = "../mdoc" }
sdjwt = { path = "../sdjwt" }
x509 = { path = "../x509" }
cose = { path = "../cose" }
# Request objects and the key-binding JWT are JOSE/JSON; base64url + strict JSON from the budget.
# serde_json also parses the Tier-2 Lean oracle's trace JSON in tests/conformance.rs.
serde = { workspace = true }
serde_json = { workspace = true }
base64ct = { workspace = true }

[dev-dependencies]
# Real aws-lc-rs crypto for the mdoc-over-OpenID4VP assembly test (issuer + device signatures).
crypto-backend = { path = "../crypto-backend" }
