[package]
name = "payment"
description = "PSD2/TS12 payment Strong Customer Authentication with dynamic linking (sans-IO)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
cose = { path = "../cose" }          # canonical CBOR for the dynamic-linking binding
serde_json = { workspace = true }

[lints]
workspace = true
