[package]
name = "presenter"
description = "Snapshot -> canonical, hashable ScreenDescription (A2UI pattern) + consent minimization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
