[package]
name = "presenter"
description = "Snapshot -> canonical, hashable ScreenDescription (A2UI pattern) + consent minimization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
# Reuse the canonical CBOR codec so the consent hash is deterministic and stable across platforms.
cose = { path = "../cose" }

[dev-dependencies]
sha2 = "0.10"

[lints]
workspace = true
