[package]
name = "sdjwt"
description = "SD-JWT VC (draft-17) + JOSE/JWS over crypto-traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
serde_json = { workspace = true }
base64ct = { workspace = true }

[dev-dependencies]
# Real SHA-256 for a Digest impl in tests, so disclosure digests can be checked against
# published SD-JWT VC vectors. Not a runtime dependency (crypto reaches the crate via crypto-traits).
sha2 = "0.10"

[lints]
workspace = true
