[package]
name = "status"
description = "Token Status List (draft-21) + certificate status, with deterministic fail policy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
cose = { path = "../cose" }
sdjwt = { path = "../sdjwt" }
