[package]
name = "trust"
description = "Trusted lists (ETSI 119 612/119 602) and trust anchors — parsing pure, fetch is an effect."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
x509 = { path = "../x509" }
cose = { path = "../cose" }
serde_json = { workspace = true }
base64ct = { workspace = true }

[dev-dependencies]
crypto-backend = { path = "../crypto-backend" }

[lints]
workspace = true
