[package]
name = "wallet-core"
description = "Facade: owns the Event/Effect enums, the sans-IO run loop, and the UniFFI-exposed API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# `lib` for the Rust workspace tests; `staticlib`/`cdylib` for the iOS/Kotlin FFI.
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
# The in-crate UniFFI binding generator (see docs: `cargo run --bin uniffi-bindgen`).
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
uniffi = { workspace = true }
crypto-traits = { path = "../crypto-traits" }
crypto-backend = { path = "../crypto-backend" }
cose = { path = "../cose" }
mdoc = { path = "../mdoc" }
sdjwt = { path = "../sdjwt" }
x509 = { path = "../x509" }
oid4vp = { path = "../oid4vp" }
oid4vci = { path = "../oid4vci" }
iso18013-5 = { path = "../iso18013-5" }
trust = { path = "../trust" }
status = { path = "../status" }
wua = { path = "../wua" }
presenter = { path = "../presenter" }
payment = { path = "../payment" }
txnlog = { path = "../txnlog" }
catalogue = { path = "../catalogue" }
w2w = { path = "../w2w" }
qes = { path = "../qes" }
serde = { workspace = true }
serde_json = { workspace = true }
# Used by the `demo` module to build self-contained fixtures for the iOS simulator app.
base64ct = { workspace = true }

[dev-dependencies]
miniz_oxide = "0.8"
