[package]
name = "wua"
description = "Wallet Unit Attestation + key attestation (TS03) over platform attestation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
cose = { path = "../cose" }
x509 = { path = "../x509" }
