[package]
name = "x509"
description = "Certificate parsing, path validation profile, and EUDI relying-party profile checks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
