[package]
name = "x509"
description = "Certificate parsing, path validation profile, and EUDI relying-party profile checks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }
# Vetted RustCrypto DER/X.509 parsers. Parsing and profile evaluation are LOGIC, not crypto;
# cryptographic key validation and certificate-signature verification go through crypto-traits.
der = "0.7"
pkcs1 = { version = "0.7", default-features = false }
x509-cert = "0.2"

[dev-dependencies]
base64ct = { workspace = true }
crypto-backend = { path = "../crypto-backend" }

[lints]
workspace = true
