[package]
name = "zkp"
description = "Pluggable zero-knowledge / unlinkable-presentation proof-provider abstraction (TS04, Watch)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
crypto-traits = { path = "../crypto-traits" }

[lints]
workspace = true
